Bug 818218 - Refactor ExtendendJSONObject parsing. r=rnewman